--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,4 +1,4 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+# Read about fixtures at http://api.rubyonrails.org/classes/Fixtures.html
 
 one:
   title: MyString
@@ -11,7 +11,7 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
-  
+
 ruby: 
   title:       Programming Ruby 1.9
   description: 
@@ -20,3 +20,4 @@ ruby:
     delivered fast, you should add Ruby to your toolbox.
   price:       49.50
   image_url:   ruby.png 
+
